--- a/IMSDK/src/main/AndroidManifest.xml
+++ b/IMSDK/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <provider
+            android:name=".IMInitializer"
+            android:authorities="your.package.name.MySdkInitializerProvider"
+            android:exported="false" />
+    </application>
+
 </manifest>
