feat: Support multi-client support, support multiple protocols of TCP and WebSocket

--- a/IMSDK/NetCore/src/main/cpp/CMakeLists.txt
+++ b/IMSDK/NetCore/src/main/cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ include(cmake/libfmt.cmake)
 add_library(netcore SHARED
         netcore.cpp
         IMWebSocketClient.h
+        IMTcpSocketClient.h
         base/HttpHandlerRegistry.h
         base/HttpHandlerRegistry.cpp
         base/WebSocketHandler.cpp
